[package]
authors = ["Aramis Razzaghipour <aramisnoah@gmail.com>"]
edition = "2018"
name = "pt"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
oorandom = "11"
png = "0.16.7"
ultraviolet = "0.7.0"

[profile.dev]
opt-level = 3
