[package]
authors = ["Aramis Razzaghipour <aramisnoah@gmail.com>"]
edition = "2018"
name = "pt"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
png = "0.16.7"
rand = "0.7.3"
rayon = "1.4.0"
ultraviolet = "0.7.1"

[profile.dev]
opt-level = 3
